# spark_wallet

./: .gitignore  Cargo.toml  batch_spark_to_arb.js  package-lock.json  package.json  refund_expired_spark.js  set_public.js  spark-server.js  spark-wallet.html
.claude/: settings.json
src/: lib.rs  main.rs
web/: next.config.ts  package-lock.json  package.json  postbuild-deterministic.js  vercel-adapter-shim.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/address-balance/: route.ts
web/app/api/balance/: route.ts
web/app/api/config/: route.ts
web/app/api/connect/: route.ts
web/app/api/disconnect/: route.ts
web/app/api/htlc/: route.ts
web/app/api/htlc/claim/: route.ts
web/app/api/lightning/fee/: route.ts
web/app/api/lightning/receive/: route.ts
web/app/api/lightning/send/: route.ts
web/app/api/privacy/: route.ts
web/app/api/send/: route.ts
web/app/api/status/: route.ts
web/app/api/swap/assets/: route.ts
web/app/api/swap/chains/: route.ts
web/app/api/swap/execute/: route.ts
web/app/api/swap/liquidity/: route.ts
web/app/api/swap/order/: route.ts
web/app/api/swap/orders/: route.ts
web/app/api/swap/quote/: route.ts
web/app/api/swap/status/: route.ts
web/app/api/transfers/: route.ts
web/app/components/: ExplorerTab.tsx  SwapTab.tsx  WalletTab.tsx  ui.tsx
web/app/explorer/order/: page.tsx
web/lib/: config.ts  session.ts  wallet-store.ts
