[package]
name = "garden-staging-swap-script"
version = "0.1.0"
edition = "2024"
default-run = "garden-staging-swap-script"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
hex = "0.4"
ethers = "2"
dotenvy = "0.15"
